<resources>
    <string name="app_name">&appname;</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Location</string>
    <string name="health_summary">Health</string>
    <string name="title_notifications">Settings</string>
    <string name="contact"><p>Contact us: <a href="cse-pocketcares@buffalo.edu">cse-pocketcares@buffalo.edu</a></p></string>
    <string name="about"><![CDATA[
		<p>PocketCare S uses Bluetooth to enable smartphones to send and receive beacon signals. It checks the distance between a smartphone and another beacon (or
		 smartphone running the same app) to see if they are within 2 meters from each other, and if so, the smartphone records the duration of such a close
		 encounter with another beacon.

        <p>It provides each user with social distance information such as the number of other users
		who have been in close proximity with the user on a hourly and daily basis. It also
		reports to the user the duration of the close encounter sessions the user was involved,
		and alerts the user if the duration of the current session exceeds a certain threshold.</p>

		<p>For administrators of an organization (whose members adopt PocketCare S), social distance
		information aggregated over all of its member users such as the total number and duration of
		close encounters in the workplace will be made available through an analytics dashboard, which
		responds to queries such as “what is the number (or the percentage) of the users who have had
		more (or less) than “x” number (or minutes) of close encounters?”.  Such information will
		empower both users and employers to practice and encourage good social distancing in the workplace.</p>

		<p>PocketCare S is built upon a previous application, called PocketCare,
		developed five years ago by University at Buffalo (UB) faculty and students track the
		flu/virus propagation, and used by many volunteers. The new PocketCare
		S is the second generation of PocketCare, where “S” also stands for “Social distance”.</p>

        <p>For more information visit PocketCare S <a href="https://engineering.buffalo.edu/computer-science-engineering/pocketcares.html">website</a>.</p>
        ]]></string>
    <string name="privacy">
		<![CDATA[
		<p><h3><font color="#FFFFFF"><b>Data Collection and Privacy Policy</b></font></h3></p>

		<p>The App does not collect any specific information about you. In other words, all the data
		collected is anonymous and will not reveal any private personal information.</p>

		<p>The app collects anonymous ids of the beacons encountered, and estimates the
		duration of each close encounter session. Each smartphone randomly generates and
		frequently changes its anonymous id to be advertised to other smartphones to further
		protect privacy. Although the app requires the GPS to be turned on in order to
		determine if a close encounter with another beacon occurs on a campus or not, no GPS
		information is collected. Users are encouraged,<b> but are not required</b>, to provide a
		daily, anonymous health monitoring report, and other anonymous profile information
		such as age groups, zip code, gender and ethnicity. </p>

		<p> Some anonymized data collected will be stored in a secure server. Based on the
		anonymous data, the server will aggregate the information on the number and duration
		of close encounters on campus from all users, and make such aggregated information
		(instead of information about any particular individual) available to the public. </p>

		PocketCare S strictly adheres to the privacy policies reviewed and
        approved by <a href="https://www.research.buffalo.edu/rsp/irb/behavioral_sciences/">University at Buffalo Human Research Protection Program (IRB)</a>. More information about
        the data collection, usage, and Privacy Policy and FAQs can be found on our <a href="https://engineering.buffalo.edu/computer-science-engineering/pocketcares.html"> website </a>.
    	]]>
</string>
    <string name="usage_point_p1">
        <![CDATA[
		<p><h3><font color="#1E90FF"><b>Your Usage Point Status</b></font></h3></p>
    	]]>
    </string>
    <string name="usage_point_p2">
        <![CDATA[
        <p><h3><font color="#1E90FF"><b>What are usage points used for?</b></font></h3></p>
        <p>&#8226; Granting your levels to unlock features in the feature tab</p>
        <p>&#8226; Used as very important metric as the chance to win prizes in each raffle cycle</p>
        
		<p><h3><font color="#1E90FF"><b>How to earn usage points fast</b></font></h3></p>
		<p>You earn usage points by running the App with \"Scan service\" turned \"ON\" (this is a default setting) in \"Scan Settings\".  Points are calculated based on the number of \"scan\" reports generated by Bluetooth, GPS, WiFi and Activity Recognizer, so higher the frequency you set these interfaces to scan, the faster your points will likely to accumulate. You can also find the daily usage point earning rate based on your current configuration in the \"Scan service\" link.</p>
		<p>You also earn points by submitting daily health status report. While we encourage you to update your health status on the same day, you will not earn additional points by submitting health status more than once a day.</p>
    	]]>
    </string>
    <string name="feature_intro">
		<![CDATA[
        <p><h3><font color="#1E90FF"><b>Unlocking Features </b></font></h3></p>
		<p>PocketCare runs a background service to collect the proximity information and ultimately help model how epidemic diseases propagation through close proximity. In order to incentivize individual’s participation, the App is designed with several levels, each with a new feature, all of which help you discover interesting facts 
		on your daily behaviors and your smartphone usage. When you start the App at level one, only the basic feature is available (unlocked). However, as you keep the App running, you will accumulate more and more usage points, and when you reach the next level, a new feature will be unlocked. We plan to continue to develop new features (and please suggest us your suggestions) and release them in future versions of the App.</p> 
		<p><h3><font color="#1E90FF"><b>Features already unlocked</b></font></h3></p>
		<p>Following is a list of features that are already unlocked to you:</p>
    	]]>
    </string>
    <string name="feature_rank_title">Show your rank</string>
    <string name="feature_rank_detail">Show your rank of usage point among all other users in each promotion period, which is related to our awarding policy. Please check \"Prizes\" in setting tab for more details.</string>
    <string name="feature_yesterday_title">Show yesterday status</string>
    <string name="feature_yesterday_detail">Show a summary of your yesterday status, including the mileage you have covered, your health status, the number of unique Bluetooth device you have encountered(detected) and the number of unique WiFi access point you have seen</string>
    <string name="feature_symptomtip_title">Health tips</string>
    <string name="feature_symptomtip_detail">Based on the health status you reported, we give you some health tips and suggestions to help you recover from it :)</string>
    <string name="feature_btenctr_title">Bluetooth encounters</string>
    <string name="feature_btenctr_detail">Among all the Bluetooth devices you have detected, how many of them are installed with the same application?</string>
    <string name="feature_btnotify_title">BT encounter notification</string>
    <string name="feature_btnotify_detail">Notify the presence of bluetooth dTestevice of your interest if it is in your vicinity. You can designate a bluetooth device and choose time interval between two consective notifications</string>
    <string name="feature_plot_health_title">Plot health status</string>
    <string name="feature_plot_health_detail">Plot a graph showing your historical health status. The health score on a scale from 0 to 5 based on your daily health report, 5 for feeling good and for each symptom the score is decreased by 1. If you dont submit health report, health score is 0.</string>
    <string name="feature_plot_bt_title">Plot Bluetooth encounters</string>
    <string name="feature_plot_bt_detail">Plot a graph showing a record of your encounters with Bluetooth devices in general, which means any devices with a bluetooth interface(headset, laptop or the ones installed with the same application)</string>
    <string name="feature_plot_mile_title">Plot mileage</string>
    <string name="feature_plot_mile_detail">Plot a graph showing the distance you have covered every day</string>
    <string name="feature_wifi_summary">Show summary of WiFi APs</string>
    <string name="feature_wifi_summary_detail">Display a summary of the discovered WiFi Access Points, in a decreasing order of their frequencies</string>
    <string name="feature_plot_wifi_title">Plot WiFi access point</string>
    <string name="feature_plot_wifi_detail">Plot the number of distinct WiFi access point discovered every day</string>
    <string name="feature_plot_act_title">Plot activities</string>
    <string name="feature_plot_act_detail">Plot a graph showing historical activity status</string>
    <string name="feature_recover_title">Recover summary</string>
    <string name="feature_recover_detail">Show you a summary of your recovery status based on the health report you submitted</string>
    <string name="feature_bench_title">Usage history</string>
    <string name="feature_bench_detail">Show aggregate information of your usage history, including the total number of distinct Bluetooth device you have detected, 
        the total number of unique WiFi access point you have discovered, the total number of health report you have submitted and the total mileaged you have travelled</string>
    <string name="feature_record_title">Personal record for the most</string>
    <string name="feature_record_detail">Show your own record for the most, including the Bluetooth device and WiFi access point that you have seen for the most times, 
        the longest recover time based on your health report and the longest distance you have travelled in a single day</string>
    <string name="feature_alert_title">Epidemic alert</string>
    <string name="feature_alert_detail">Give you information based on health reports from users and users your have encountered</string>
    <string name="feature_download_title">Download</string>
    <string name="feature_download_detail">Download your own data locally to this device</string>
    <string name="feature_no_next_title">Out of Feature</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_generalinfo">General Info</string>
    <string name="menu_reporthealth">Report Health</string>
    <string name="menu_about">About</string>
    <string name="surveystr_gender">Gender</string>
    <string name="surveystr_age">Age</string>
    <string name="surveystr_occupation">Occupation</string>
    <string name="surveystr_encounter">Encounters</string>
    <string name="setting_fq_default_wifi">15</string>
    <string name="setting_fq_default_gps">30</string>
    <string name="setting_fq_default_activityrecognition">15</string>
    <string name="idea">Learn tips and guidelines from health professionals.</string>
    <string name="location">Keep track of social distance with other users.</string>
    <string name="introduction_activity">To learn more about &appname;, visit FAQs.</string>
    <string name="close_contacts">Close Encounters</string>
    <string name="health_report">Take a few seconds to record health status daily.</string>
    <string name="notification_reminder_title">Social Distance Notification</string>
    <string name="notification_header">Notifications</string>
    <string name="scanning_header">Close Encounter Scanning</string>
</resources>