<!--
  ~ Copyright 2020 University at Buffalo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="1"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_generalinfo"
        android:title="@string/menu_generalinfo"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_reporthealth"
        android:title="@string/menu_reporthealth"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="4"
        app:showAsAction="never" />


</menu>