<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 University at Buffalo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_run"
        android:title="@string/title_home" />

    <item
        android:id="@+id/health_summary_item"
        android:icon="@drawable/heart_updated"
        android:title="@string/health_summary" />

    <item
        android:id="@+id/close_contacts"
        android:icon="@drawable/distance_nav"
        android:title="@string/close_contacts" />

    <item
        android:id="@+id/sessions"
        android:icon="@drawable/dev2"
        android:title="Dev options"
        />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_gear"
        android:title="@string/title_notifications" />
</menu>
